--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,144 @@
-requests
+aiohappyeyeballs
+aiohttp
+aiosignal
+annotated-types
+anyio
+asttokens
+attrs
+backoff
+bcrypt
 beautifulsoup4
-langchain-community
-langchain-text-splitters
-langchain-google-genai
-langchain-chroma
+build
+cachetools
+certifi
+charset-normalizer
 chromadb
+click
+colorama
+coloredlogs
+comm
+dataclasses-json
+debugpy
+decorator
+distro
+durationpy
+executing
+fastapi
+filelock
+filetype
+flatbuffers
+frozenlist
+fsspec
+google-ai-generativelanguage
+google-api-core
+google-auth
+googleapis-common-protos
+greenlet
+grpcio
+grpcio-status
+h11
+httpcore
+httptools
+httpx
+httpx-sse
+huggingface-hub
+humanfriendly
+idna
+importlib_metadata
+importlib_resources
+ipykernel
+ipython
+jedi
+jsonpatch
+jsonpointer
+jsonschema
+jsonschema-specifications
+jupyter_client
+jupyter_core
+kubernetes
+langchain
+langchain-chroma
+langchain-community
+langchain-core
+langchain-google-genai
+langchain-text-splitters
+langsmith
+markdown-it-py
+marshmallow
+matplotlib-inline
+mdurl
+mmh3
+mpmath
+multidict
+mypy_extensions
+nest-asyncio
+numpy
+oauthlib
+onnxruntime
+opentelemetry-api
+opentelemetry-exporter-otlp-proto-common
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-proto
+opentelemetry-sdk
+opentelemetry-semantic-conventions
+orjson
+overrides
+packaging
+parso
+platformdirs
+posthog
+prompt_toolkit
+propcache
+proto-plus
+protobuf
+psutil
+pure_eval
+pyasn1
+pyasn1_modules
+pybase64
+pydantic
+pydantic-settings
+pydantic_core
+Pygments
+PyMuPDF
+PyPika
+pyproject_hooks
+pyreadline3
+python-dateutil
 python-dotenv
+pywin32
+PyYAML
+pyzmq
+referencing
+requests
+requests-oauthlib
+requests-toolbelt
+rich
+rpds-py
+rsa
+shellingham
+six
+sniffio
+soupsieve
+SQLAlchemy
+stack-data
+starlette
+sympy
+tenacity
+tokenizers
+tornado
+tqdm
+traitlets
+typer
+typing-inspect
+typing-inspection
+typing_extensions
+urllib3
+uvicorn
+watchfiles
+wcwidth
+websocket-client
+websockets
+yarl
+zipp
+zstandard
