--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,50 @@
-langchain==0.1.20
-langchain-community==0.0.38
-langchain-huggingface>=0.0.1
+# Core Dependencies - Updated for Python 3.13 compatibility
+langchain>=0.3.0
+langchain-community>=0.3.0
+langchain-chroma>=0.2.0  # New official Chroma integration (replaces langchain-community.vectorstores.Chroma)
+langchain-huggingface>=0.1.0
 sentence-transformers>=2.6.0
-chromadb==0.3.29
+chromadb>=0.5.0
 python-dotenv>=1.0.0
+
+# Backend API Dependencies
+flask>=3.0.0
+flask-cors>=4.0.0
+waitress>=2.1.0  # Windows-compatible production server (alternative to gunicorn)
+
+# Ollama Python Client
+ollama>=0.1.0
+
+# Evaluation Metrics Dependencies
+nltk>=3.8.1
+rouge-score>=0.1.2
+scikit-learn>=1.3.0
+pandas>=2.0.0
+# numpy is already installed and will be used by dependencies
+
+# Visualization (for evaluation reports)
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Fine-tuning Dependencies (optional, for later phases)
+# Uncomment when ready for fine-tuning
+# transformers>=4.35.0
+# peft>=0.7.0
+# accelerate>=0.24.0
+# bitsandbytes>=0.41.0
+# datasets>=2.14.0
+# trl>=0.7.0  # For training with RL
+
+# Testing & Development
+pytest>=7.4.0
+pytest-cov>=4.1.0
+black>=23.0.0  # Code formatting
+flake8>=6.0.0  # Linting
+
+# Data Collection (Already have these, but listing for completeness)
+# beautifulsoup4>=4.12.0
+# requests>=2.31.0
+# PyMuPDF>=1.23.0
+
+# Utilities
+tqdm>=4.66.0  # Progress bars
